--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <ul class="contacts">
                         <li class="contacts__item">
                             <a class="contacts__link mob-email" href="mailto:info@devstudio.com">
-                                <svg class="contacts__icon" width="16px" height="12px">
+                                <svg class="contacts__icon-email" width="16px" height="12px">
                                     <use href="./images/sprite.svg#envelope"></use>
                                 </svg>
                                 info@devstudio.com
@@ -60,7 +60,7 @@
                         </li>
                         <li class="contacts__item">
                             <a class="contacts__link mob-tel" href="tel:+380961111111">
-                                <svg class="contacts__icon" width="11px" height="16px">
+                                <svg class="contacts__icon-tel" width="11px" height="16px">
                                     <use href="./images/sprite.svg#smartphone"></use>
                                 </svg>
                                 +38 096 111 11 11
