team images done

--- a/index.html
+++ b/index.html
@@ -192,11 +192,26 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__item">
-              <img
-                class="team-item__photo"
-                src="./images/igor.jpg"
-                alt="Продакт дизайнер игорь"
-              />
+             <picture>
+              <source srcset="./images/team/igor-desk.webp, ./images/team/igor-desk@2x.webp 2x"
+              media="(min-width: 1200px)" 
+              type="image/webp">
+              <source srcset="./images/team/igor-desk.jpg, ./images/team/igor-desk@2x.jpg 2x" 
+              media="(min-width: 1200px)">
+              <source srcset="./images/team/igor-tablet.webp, ./images/team/igor-tablet@2x.webp 2x" 
+              media="(min-width: 768px)"
+              type="image/webp">
+              <source srcset="./images/team/igor-tablet.jpg, ./images/team/igor-tablet@2x.jpg 2x" 
+              media="(min-width: 768px)">
+              <source srcset="./images/team/igor.webp, ./images/team/igor@2x.webp 2x" 
+              media="(min-width: 320px)"
+              type="image/webp">
+              <source srcset="./images/team/igor.jpg, ./images/team/igor@2x.jpg 2x" 
+              media="(min-width: 320px)">
+              <img class="team-item__photo" 
+              src="./images/team/igor.jpg" 
+              alt="Продакт дизайнер игорь"/>
+             </picture>
               <div class="team-item__info">
                 <h3 class="team-item__name">Игорь Демьяненко</h3>
                 <p class="team-item__position" lang="en">Product Designer</p>
@@ -273,11 +288,26 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="team-item__photo"
-                src="./images/olga.jpg"
-                alt="фронт-энд разработчик ольга"
-              />
+              <picture>
+                <source srcset="./images/team/olga-desk.webp, ./images/team/olga-desk@2x.webp 2x" 
+                media="(min-width: 1200px)"
+                type="image/webp">
+                <source srcset="./images/team/olga-desk.jpg, ./images/team/olga-desk@2x.jpg 2x" 
+                media="(min-width: 1200px)">
+                <source srcset="./images/team/olga-tablet.webp, ./images/team/olga-tablet@2x.webp 2x" 
+                media="(min-width: 768px)"
+                type="image/webp">
+                <source srcset="./images/team/olga-tablet.jpg, ./images/team/olga-tablet@2x.jpg 2x" 
+                media="(min-width: 768px)">
+                <source srcset="./images/team/olga.webp, ./images/team/olga@2x.webp 2x" 
+                media="(min-width: 320px)" 
+                type="image/webp">
+                <source srcset="./images/team/olga.jpg, ./images/team/olga@2x.jpg 2x" 
+                media="(min-width: 320px)">
+                <img class="team-item__photo" 
+                src="./images/team/olga.jpg" 
+                alt="фронт-энд разработчик ольга"/>
+              </picture>
               <div class="team-item__info">
                 <h3 class="team-item__name">Ольга Репина</h3>
                 <p class="team-item__position" lang="en">Frontend Developer</p>
@@ -354,11 +384,26 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="team-item__photo"
-                src="./images/nikolay.jpg"
-                alt="маркетолог николай"
-              />
+              <picture>
+                <source srcset="./images/team/nik-desk.webp, ./images/team/nik-desk@2x.webp 2x" 
+                media="(min-width: 1200px)"
+                type="image/webp">
+                <source srcset="./images/team/nik-desk.jpg, ./images/team/nik-desk@2x.jpg 2x" 
+                media="(min-width: 1200px)">
+                <source srcset="./images/team/nik-tablet.webp, ./images/team/nik-tablet@2x.webp 2x" 
+                media="(min-width: 768px)"
+                type="image/webp">
+                <source srcset="./images/team/nik-tablet.jpg, ./images/team/nik-tablet@2x.jpg 2x" 
+                media="(min-width: 768px)">
+                <source srcset="./images/team/nik.webp, ./images/team/nik@2x.webp 2x" 
+                media="(min-width: 320px)" 
+                type="image/webp">
+                <source srcset="./images/team/nik.jpg, ./images/team/nik@2x.jpg 2x" 
+                media="(min-width: 320px)">
+                <img class="team-item__photo" 
+                src="./images/team/nik.jpg" 
+                alt="маркетолог николай" />
+              </picture>
               <div class="team-item__info">
                 <h3 class="team-item__name">Николай Тарасов</h3>
                 <p class="team-item__position" lang="en">Marketing</p>
@@ -435,11 +480,25 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="team-item__photo"
-                src="./images/michail.jpg"
-                alt="УИ дизайнер михаил"
-              />
+              <picture>
+                <source srcset="./images/team/michail-desk.webp, ./images/team/michail-desk@2x.webp 2x" 
+                media="(min-width: 1200px)"
+                type="image/webp">
+                <source srcset="./images/team/michail-desk.jpg, ./images/team/michail-desk@2x.jpg 2x" 
+                media="(min-width: 1200px)">
+                <source srcset="./images/team/michail-tablet.webp, ./images/team/michail-tablet@2x.webp 2x" 
+                media="(min-width: 768px)"
+                type="image/webp">
+                <source srcset="./images/team/michail-tablet.jpg, ./images/team/michail-tablet@2x.jpg 2x" 
+                media="(min-width: 768px)">
+                <source srcset="./images/team/michail.webp, ./images/team/michail@2x.webp 2x" 
+                media="(min-width: 320px)" 
+                type="image/webp">
+                <source srcset="./images/team/michail.jpg, ./images/team/michail@2x.jpg 2x" 
+                media="(min-width: 320px)">
+                <img class="team-item__photo" src="./images/team/michail.jpg" 
+                alt="УИ дизайнер михаил"/>
+              </picture>
               <div class="team-item__info">
                 <h3 class="team-item__name">Михаил Ермаков</h3>
                 <p class="team-item__position" lang="en">UI Designer</p>
